all the changes

--- a/web/index.html
+++ b/web/index.html
@@ -60,29 +60,46 @@
 </section>
 
 
-<section "SBMD">
+<section id="SBMD">
 	<h2>SENSORY BASED MOVEMENT DISORDER</h2>
 	<p>
 		Text to descrive sensory based movement disorders goes here
 	</p>
-	<table>
+	
+	<div class="column1of2">
+		<h3>DYSPRAXIA</h3>
+	</div>
 
-
-
-
-
-	</table>
-
+	<div class="column2of2">
+		<h3>POSTURAL DISORDER</h3>
+	</div>
 </section>
 
-<section "SBMD">
-	<h2>Sensory Based Motor Disorder</h2>
+<section id="SDD">
+	<h2>SENSORY DISCRIMINATION DISORDER</h2>
+	<p>
+		Text to describe sensory discrimination disorders goes here
+	</p>
+	
+	<div class="column1of5">
+		<h3>VISUAL</h3>
+	</div>
 
-</section>
+	<div class="column2of5">
+		<h3>AUDITORY</h3>
+	</div>
 
-<section "SDD">
-	<h2>Sensory Discrimination Disorder</h2>
+	<div class="column3of5">
+		<h3>AUDITORY</h3>
+	</div>
 
+	<div class="column4of5">
+		<h3>AUDITORY</h3>
+	</div>
+
+	<div class="column5of5">
+		<h3>AUDITORY</h3>
+	</div>
 </section>
 
 </body>
